[gd_scene load_steps=4 format=3 uid="uid://d3f4xmlb2v210"]

[ext_resource type="Script" path="res://addons/pronto/behaviors/ExportBehavior.gd" id="1"]
[ext_resource type="Script" path="res://prototypes/game-esportsreadymario/game-esportsreadymario.gd" id="1_ryt3u"]
[ext_resource type="PackedScene" uid="uid://b4ijhemwpli7a" path="res://prototypes/game-esportsreadymario/level.tscn" id="3_rwg77"]

[node name="Node2D" type="Node"]
script = ExtResource("1_ryt3u")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="HSplitContainer" type="HSplitContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
dragger_visibility = 1

[node name="SubViewportContainer" type="SubViewportContainer" parent="ColorRect/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport1" type="SubViewport" parent="ColorRect/HSplitContainer/SubViewportContainer"]
unique_name_in_owner = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
audio_listener_enable_2d = true
size = Vector2i(2, 2)
render_target_update_mode = 4

[node name="jumpnrun_template" parent="ColorRect/HSplitContainer/SubViewportContainer/SubViewport1" instance=ExtResource("3_rwg77")]

[node name="SubViewportContainer2" type="SubViewportContainer" parent="ColorRect/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport2" type="SubViewport" parent="ColorRect/HSplitContainer/SubViewportContainer2"]
unique_name_in_owner = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
audio_listener_enable_2d = true
size = Vector2i(2, 2)
render_target_update_mode = 4

[node name="ExportBehavior" type="Node2D" parent="."]
position = Vector2(576, 324)
script = ExtResource("1")
title = "esportsreadymario"
authors = PackedStringArray("Max, Luke")
